
- Date:
  . Fixed bug #71635 (DatePeriod::getEndDate segfault). (Thomas Punt)

- Fileinfo:
  . Fixed bug #71527 (Buffer over-write in finfo_open with malformed magic
    file). (Anatol)

- libxml:
  . Fixed bug #71536 (Access Violation crashes php-cgi.exe). (Anatol)

- mbstring:
  . Fixed bug #71906 (AddressSanitizer: negative-size-param (-1) in
    mbfl_strcut). (Stas)

- ODBC:
  . Fixed bug #47803, #69526 (Executing prepared statements is succesfull only
    for the first two statements). (einavitamar at gmail dot com, Anatol)

- PCRE:
  . Fixed bug #71659 (segmentation fault in pcre running twig tests).
    (nish dot aravamudan at canonical dot com)

- PDO_DBlib:
  . Bug #54648 (PDO::MSSQL forces format of datetime fields).
    (steven dot lambeth at gmx dot de, Anatol)

- Phar:
  . Fixed bug #71625 (Crash in php7.dll with bad phar filename).
    (Anatol)
  . Fixed bug #71317 (PharData fails to open specific file). (Jos Elstgeest)
  . Fixed bug #71860 (Invalid memory write in phar on filename with \0 in
    name). (Stas)

- phpdbg:
  . Fixed crash when advancing (except step) inside an internal function. (Bob)

- Session:
  . Fixed Bug #71683 (Null pointer dereference in zend_hash_str_find_bucket).
    (Yasuo)

- SNMP:
  . Fixed bug #71704 (php_snmp_error() Format String Vulnerability).
    (andrew at jmpesp dot org)

- SPL:
  . Fixed bug #71617 (private properties lost when unserializing ArrayObject).
    (Nikita)

- Standard:
  . Fixed bug #71660 (array_column behaves incorrectly after foreach by
    reference). (Laruence)
  . Fixed bug #71798 (Integer Overflow in php_raw_url_encode).
    (taoguangchen at icloud dot com, Stas)

- Zip:
  . Update bundled libzip to 1.1.2. (Remi, Anatol)

03 Mar 2016 PHP 7.0.4

- Core:
  . Fixed bug (Low probability segfault in zend_arena). (Laruence)
  . Fixed bug #71441 (Typehinted Generator with return in try/finally crashes).
    (Bob)
  . Fixed bug #71442 (forward_static_call crash). (Laruence)